# datafusion-ethers

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml
.github/workflows/: build.yaml
examples/: eth.rs  peaq.rs
src/: config.rs  convert.rs  lib.rs  provider.rs  sql_server.rs  stream.rs  udf.rs  utils.rs
src/convert/: decoded.rs  hybrid.rs  mod.rs  raw.rs
tests/contracts/: .env.local  .gitignore  README.md  foundry.toml  package-lock.json  package.json
tests/contracts/script/: Base.s.sol  Deploy.s.sol
tests/contracts/src/: Contract.sol
tests/tests/: chain.rs  mod.rs  test_convert.rs  test_decode.rs  test_provider.rs  test_stream.rs  utils.rs
