[package]
name = "datafusion-ethers"
version = "38.2.0"
edition = "2021"
repository = "https://github.com/kamu-data/datafusion-ethers"
description = "Ethereum RPC bridge for Apache Datafusion"
keywords = ["datafusion", "sql", "ethereum", "blockchain"]
authors = ["Kamu Data Inc. <info@kamu.dev>"]
license = "Apache-2.0"


[dependencies]
async-stream = { version = "0.3" }
async-trait = { version = "0.1" }
alloy = { version = "0.1", git = "https://github.com/alloy-rs/alloy", branch = "main", default-features = false, features = [
    "std",
    "dyn-abi",
    "json-abi",
    "provider-http",
    "provider-ws",
    "rpc-types-eth",
] }
datafusion = { version = "38", default-features = false }
futures = { version = "0.3" }
serde_json = { version = "1" }
tokio = { version = "1.37.0", default-features = false }
thiserror = { version = "1" }
tracing = { version = "0.1.40", default-features = false }


[dev-dependencies]
alloy = { version = "0.1", git = "https://github.com/alloy-rs/alloy", branch = "main", default-features = false, features = [
    "node-bindings",
    "sol-types",
    "contract",
] }
datafusion = { version = "38", default-features = false, features = [
    "parquet",
] }
datafusion-functions-json = { version = "0.1" }
indoc = { version = "2" }
pretty_assertions = { version = "1" }
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3" }


[patch.crates-io]
# TODO: https://github.com/datafusion-contrib/datafusion-functions-json/issues/12
datafusion-functions-json = { git = 'https://github.com/kamu-data/datafusion-functions-json.git', branch = "pin-jiter" }
