[package]
name = "datafusion-ethers"
version = "49.1.0"
edition = "2024"
repository = "https://github.com/kamu-data/datafusion-ethers"
description = "Ethereum RPC bridge for Apache Datafusion"
keywords = ["datafusion", "sql", "ethereum", "blockchain"]
authors = ["Kamu Data Inc. <info@kamu.dev>"]
license = "Apache-2.0"


[dependencies]
async-stream = { version = "0.3" }
async-trait = { version = "0.1" }
alloy = { version = "1", default-features = false, features = [
    "dyn-abi",
    "network",
    "providers",
    "json-abi",
    "rpc-types-eth",
    "std",
] }
datafusion = { version = "49", default-features = false }
futures = { version = "0.3" }
serde_json = { version = "1" }
tokio = { version = "1", default-features = false }
thiserror = { version = "2" }
tracing = { version = "0.1", default-features = false }


[dev-dependencies]
alloy = { version = "1", default-features = false, features = [
    "contract",
    "node-bindings",
    "provider-http",
    "provider-ws",
    "reqwest-rustls-tls",
    "sol-types",
] }
datafusion = { version = "49", default-features = false, features = [
    "parquet",
] }
datafusion-functions-json = { version = "0.49", default-features = false }
indoc = { version = "2" }
pretty_assertions = { version = "1" }
test-log = { version = "0.2", features = ["trace"] }
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
] }
tracing-subscriber = { version = "0.3" }


[patch.crates-io]
# datafusion = { git = 'https://github.com/apache/datafusion.git', rev = "7bd7747" }
